// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with a CTA 1`] = `
<div
  class="withStyles-u5urts-0 kZHLyC withStyles-u5urts-0 XiMpO"
>
  <div
    class="withStyles-u5urts-0 gnyNoy withStyles-u5urts-0 RWVBC"
  >
    <h2
      class="withStyles-u5urts-0 jLXugA"
    >
      Test ContentBlock
    </h2>
    <div
      class="withStyles-u5urts-0 cjEcvK"
    >
      <p>
        ContentBlock is sooooooo coool and awesome!
      </p>
    </div>
    <button
      class="withStyles-u5urts-0 gqQEcA"
      text="Click here!"
      type="primary"
      url="path/to/link"
    />
  </div>
</div>
`;

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with a grey background 1`] = `
<div
  class="withStyles-u5urts-0 kIlezR withStyles-u5urts-0 XiMpO"
>
  <div
    class="withStyles-u5urts-0 loSvN"
  >
    <img
      alt="Cool image!"
      class="withStyles-u5urts-0 joCpTD"
      src="path/to/image"
    />
  </div>
  <div
    class="withStyles-u5urts-0 gnyNoy withStyles-u5urts-0 cnwOiN"
  >
    <h2
      class="withStyles-u5urts-0 jLXugA"
    >
      Test ContentBlock
    </h2>
    <div
      class="withStyles-u5urts-0 cjEcvK"
    >
      <p>
        ContentBlock is sooooooo coool and awesome!
      </p>
    </div>
  </div>
</div>
`;

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with an Image 1`] = `
<div
  class="withStyles-u5urts-0 kZHLyC withStyles-u5urts-0 XiMpO"
>
  <div
    class="withStyles-u5urts-0 loSvN"
  >
    <img
      alt="Cool image!"
      class="withStyles-u5urts-0 joCpTD"
      src="path/to/image"
    />
  </div>
  <div
    class="withStyles-u5urts-0 gnyNoy withStyles-u5urts-0 cnwOiN"
  >
    <h2
      class="withStyles-u5urts-0 jLXugA"
    >
      Test ContentBlock
    </h2>
    <div
      class="withStyles-u5urts-0 cjEcvK"
    >
      <p>
        ContentBlock is sooooooo coool and awesome!
      </p>
    </div>
  </div>
</div>
`;

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with an right imageAlign and left textAlign 1`] = `
<div
  class="withStyles-u5urts-0 kZHLyC withStyles-u5urts-0 XiMpO"
>
  <div
    class="withStyles-u5urts-0 loSvN"
  >
    <img
      alt="Cool image!"
      class="withStyles-u5urts-0 joCpTD"
      src="path/to/image"
    />
  </div>
  <div
    class="withStyles-u5urts-0 gnyNoy withStyles-u5urts-0 cnwOiN"
  >
    <h2
      class="withStyles-u5urts-0 jLXugA"
    >
      Test ContentBlock
    </h2>
    <div
      class="withStyles-u5urts-0 cjEcvK"
    >
      <p>
        ContentBlock is sooooooo coool and awesome!
      </p>
    </div>
  </div>
</div>
`;

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with no image 1`] = `
<div
  class="withStyles-u5urts-0 kZHLyC withStyles-u5urts-0 XiMpO"
>
  <div
    class="withStyles-u5urts-0 gnyNoy withStyles-u5urts-0 RWVBC"
  >
    <h2
      class="withStyles-u5urts-0 jLXugA"
    >
      Test ContentBlock
    </h2>
    <div
      class="withStyles-u5urts-0 cjEcvK"
    >
      <p>
        ContentBlock is sooooooo coool and awesome!
      </p>
    </div>
  </div>
</div>
`;
